--- a/.gitignore
+++ b/.gitignore
@@ -98,3 +98,52 @@ Thumbs.db
 
 # Archivos de PyInstaller
 *.spec
+static/images/toys/20250906_004643_YOYO_CLASSIC.png
+static/images/toys/20250906_004745_YATES_CON_LLANTAS.png
+static/images/toys/20250906_004753_SLIME_DE_PULPO.png
+static/images/toys/20250906_004802_SALTA_SOGA_CON_CONTADOR.png
+static/images/toys/20250906_004812_RAQUETA_DE_PLAYA_CON_PELOTA.png
+static/images/toys/20250906_004825_POP_IT_CON_SPINNER.png
+static/images/toys/20250906_004835_PISTOLAS_DE_AGUA_DE_DINOSAURIO.png
+static/images/toys/20250906_004843_PELOTAS_DE_ESPUMA_CON_NUMEROS.png
+static/images/toys/20250906_004852_MUNECO_PEGAJOSO.png
+static/images/toys/20250906_004908_MINI_RESORTES.png
+static/images/toys/20250906_004918_LIBRO_DE_COLOREAR_SUPERHEROES.png
+static/images/toys/20250906_004937_JUGUETES_VOLADORES_DE_PLATILLO.png
+static/images/toys/20250906_004946_JUGUETES_SENSORIAL_EXTENSIBLE.png
+static/images/toys/20250906_005002_JUGUETES_GIRATORIOS_DE_DOS_PARTES.png
+static/images/toys/20250906_005012_JUEGOS_DE_DADOS_CLASICO.png
+static/images/toys/20250906_005022_JUEGO_DE_AGUA_ESPACIAL.png
+static/images/toys/20250906_005036_JENGA_CON_NUMEROS.png
+static/images/toys/20250906_005044_HUEVO_DE_COCODRILO.png
+static/images/toys/20250906_005053_HERRAMIENTAS_DE_CONSTRUCCION.png
+static/images/toys/20250906_005104_CUBO_Y_FORMA_DE_RUBIX.png
+static/images/toys/20250906_005115_ACCESORIOS_PARA_NINAS.png
+static/images/toys/20250906_005122_ARENAS_MAGICAS_CON_PERSONAJES_NINA.png
+static/images/toys/20250906_005132_BURBUJEROS_NINA.png
+static/images/toys/20250906_005141_CARTERA_DE_FLOR_CON_ACCESORIOS.png
+static/images/toys/20250906_005150_CARTERA_EN_FORMA_DE_MARIPOSAS.png
+static/images/toys/20250906_005203_CARTERAS_DE_FRUTAS.png
+static/images/toys/20250906_005222_CONCHA_DE_ANILLOS_SURTIDAS.png
+static/images/toys/20250906_005233_GORROS_DE_PELUCHES_CON_LUCES.png
+static/images/toys/20250906_005249_HUEVO_DE_FLAMENCO.png
+static/images/toys/20250906_005259_CASCO_DE_OBRERO.png
+static/images/toys/20250906_005309_CARROS_HOT_WHEELS.png
+static/images/toys/20250906_005318_CARRITOS_DE_COLORES.png
+static/images/toys/20250906_005327_BURBUJERO_DE_ANIMALES.png
+static/images/toys/20250906_005339_BURBUJEROS_NINO.png
+static/images/toys/20250906_005349_YOYO_CON_EMOGIS.png
+static/images/toys/20250906_005404_POP_IT_CON_SPINNER.png
+static/images/toys/20250906_005419_JUGUETES_SENSORIAL_EXTENSIBLE.png
+static/images/toys/20250906_005433_JACKS_COLORIDOS.png
+static/images/toys/20250906_005444_ARENAS_MAGICAS_CON_PERSONAJES_NINO.png
+static/images/toys/20250906_005500_JUGUETES_VOLADORES_DE_PLATILLO.png
+static/images/toys/20250906_005513_SALTA_SOGA_CON_CONTADOR.png
+static/images/toys/20250906_005525_BINOCULARES.png
+static/images/toys/20250906_005535_BARCOS_VELOCES.png
+static/images/toys/20250906_005701_SPINNER_COLORIDOS_CON_HOYUELOS.png
+static/images/toys/20250906_005715_SALTA_SOGA_CON_JUEGO_DE_JACKS_INCLUIDO.png
+static/images/toys/20250906_005729_PELOTAS_DE_ESPUMA_CON_NUMEROS.png
+static/images/toys/20250906_005742_JUEGO_DE_AGUA_CON_AROS.png
+static/images/toys/20250906_005756_KIT_DE_ACCESORIOS_PARA_REALIZAR_BISUTERIA.png
+static/images/toys/20250906_005805_JUGUETES_GIRATORIOS_DE_DOS_PARTES.png
