User sign up - Admin panel Fixes

--- a/.gitignore
+++ b/.gitignore
@@ -131,7 +131,7 @@ static/images/toys/20250906_005259_CASCO_DE_OBRERO.png
 static/images/toys/20250906_005309_CARROS_HOT_WHEELS.png
 static/images/toys/20250906_005318_CARRITOS_DE_COLORES.png
 static/images/toys/20250906_005327_BURBUJERO_DE_ANIMALES.png
-static/images/toys/20250906_005339_BURBUJEROS_NINO.png
+static/images/toys/20250906_005339_BURBUJEROS_NINO.png  1
 static/images/toys/20250906_005349_YOYO_CON_EMOGIS.png
 static/images/toys/20250906_005404_POP_IT_CON_SPINNER.png
 static/images/toys/20250906_005419_JUGUETES_SENSORIAL_EXTENSIBLE.png
