--- a/.gitignore
+++ b/.gitignore
@@ -147,3 +147,16 @@ static/images/toys/20250906_005729_PELOTAS_DE_ESPUMA_CON_NUMEROS.png
 static/images/toys/20250906_005742_JUEGO_DE_AGUA_CON_AROS.png
 static/images/toys/20250906_005756_KIT_DE_ACCESORIOS_PARA_REALIZAR_BISUTERIA.png
 static/images/toys/20250906_005805_JUGUETES_GIRATORIOS_DE_DOS_PARTES.png
+static/images/toys/20250915_105114_Captura_de_pantalla_2025-09-15_105423.jpg
+static/images/toys/20250915_105330_Captura_de_pantalla_2025-09-15_105717.jpg
+static/images/toys/20250915_105616_WhatsApp_Image_2025-09-12_at_9.24.00_AM_1.jpeg
+static/images/toys/20250915_105912_WhatsApp_Image_2025-09-12_at_9.21.02_AM.jpeg
+static/images/toys/20250915_110114_Captura_de_pantalla_2025-09-15_110500.jpg
+static/images/toys/20250915_110250_WhatsApp_Image_2025-09-12_at_9.20.22_AM.jpeg
+static/images/toys/20250915_110719_Captura_de_pantalla_2025-09-15_111020.jpg
+static/images/toys/20250915_110918_Captura_de_pantalla_2025-09-15_111252.jpg
+static/images/toys/20250915_111135_Captura_de_pantalla_2025-09-15_111520.jpg
+static/images/toys/20250915_114614_WhatsApp_Image_2025-09-12_at_9.24.00_AM.jpeg
+static/images/toys/20250915_114742_WhatsApp_Image_2025-09-12_at_9.21.02_AM.jpeg
+static/images/toys/20250915_115209_84a9ff8d8d85e8f1809b72ed51f03c09.jpg
+static/images/toys/20250915_115253_0845794_magnetic-dry-erase-large-board-double-sided-magnet-board-kids-whiteboard-portable-smart-board-with-e.jpeg
