--- a/.gitignore
+++ b/.gitignore
@@ -160,3 +160,7 @@ static/images/toys/20250915_114614_WhatsApp_Image_2025-09-12_at_9.24.00_AM.jpeg
 static/images/toys/20250915_114742_WhatsApp_Image_2025-09-12_at_9.21.02_AM.jpeg
 static/images/toys/20250915_115209_84a9ff8d8d85e8f1809b72ed51f03c09.jpg
 static/images/toys/20250915_115253_0845794_magnetic-dry-erase-large-board-double-sided-magnet-board-kids-whiteboard-portable-smart-board-with-e.jpeg
+static/images/toys/20250916_084619_Captura_de_pantalla_2025-09-16_084952.jpg
+static/images/toys/20250916_085000_Captura_de_pantalla_2025-09-16_085347.jpg
+static/images/toys/20250916_085401_Captura_de_pantalla_2025-09-16_085726.jpg
+static/images/toys/20250916_085758_Captura_de_pantalla_2025-09-16_090102.jpg
