--- a/.gitignore
+++ b/.gitignore
@@ -164,3 +164,7 @@ static/images/toys/20250916_084619_Captura_de_pantalla_2025-09-16_084952.jpg
 static/images/toys/20250916_085000_Captura_de_pantalla_2025-09-16_085347.jpg
 static/images/toys/20250916_085401_Captura_de_pantalla_2025-09-16_085726.jpg
 static/images/toys/20250916_085758_Captura_de_pantalla_2025-09-16_090102.jpg
+static/images/toys/20251021_135203_Captura_de_pantalla_2025-10-21_135633.jpg
+static/images/toys/20251021_135405_Captura_de_pantalla_2025-10-21_135815.jpg
+static/images/toys/20251021_135604_Captura_de_pantalla_2025-10-21_140023.jpg
+static/images/toys/20251021_135720_Captura_de_pantalla_2025-10-21_140139.jpg
