--- a/.gitignore
+++ b/.gitignore
@@ -168,3 +168,9 @@ static/images/toys/20251021_135203_Captura_de_pantalla_2025-10-21_135633.jpg
 static/images/toys/20251021_135405_Captura_de_pantalla_2025-10-21_135815.jpg
 static/images/toys/20251021_135604_Captura_de_pantalla_2025-10-21_140023.jpg
 static/images/toys/20251021_135720_Captura_de_pantalla_2025-10-21_140139.jpg
+static/images/toys/20250906_005339_BURBUJEROS_NINO.png
+static/images/toys/20251029_102841_juego-del-elastico.jpg
+static/images/toys/20251029_132503_Captura_de_pantalla_2025-10-21_135815.jpg
+static/images/toys/20251029_132636_Captura_de_pantalla_2025-10-21_135815.jpg
+static/images/toys/20251029_132733_Captura_de_pantalla_2025-10-21_135815.jpg
+static/images/toys/20250906_005339_BURBUJEROS_NINO.png
