--- a/.gitignore
+++ b/.gitignore
@@ -174,3 +174,69 @@ static/images/toys/20251029_132503_Captura_de_pantalla_2025-10-21_135815.jpg
 static/images/toys/20251029_132636_Captura_de_pantalla_2025-10-21_135815.jpg
 static/images/toys/20251029_132733_Captura_de_pantalla_2025-10-21_135815.jpg
 static/images/toys/20250906_005339_BURBUJEROS_NINO.png
+static/images/toys/20251029_154614_1706-large_default.jpg
+static/images/toys/20251029_154954_kcuayv.jpg
+static/images/toys/20251029_155159_Captura_de_pantalla_2025-10-29_155657.jpg
+static/images/toys/20251029_155405_Captura_de_pantalla_2025-10-29_155909.jpg
+static/images/toys/20251029_155912_Captura_de_pantalla_2025-10-29_160348.jpg
+static/images/toys/20251029_160256_Captura_de_pantalla_2025-10-29_160235.jpg
+static/images/toys/20251029_160346_Captura_de_pantalla_2025-10-29_160608.jpg
+static/images/toys/20251029_161118_Captura_de_pantalla_2025-10-29_160951.jpg
+static/images/toys/20251029_161550_1706-large_default.jpg
+static/images/toys/20251029_161657_Captura_de_pantalla_2025-10-29_161039.jpg
+static/images/toys/20251029_161941_Captura_de_pantalla_2025-10-29_162425.jpg
+static/images/toys/20251029_163444_Captura_de_pantalla_2025-10-29_162743.jpg
+static/images/toys/20251029_163559_Captura_de_pantalla_2025-10-29_162724.jpg
+static/images/toys/20251029_164050_WhatsApp_Image_2025-10-29_at_2.23.13_PM_1.jpeg
+static/images/toys/20251029_164621_Captura_de_pantalla_2025-10-29_165007.jpg
+static/images/toys/20251029_164739_Captura_de_pantalla_2025-10-29_165007.jpg
+static/images/toys/20251029_165703_Captura_de_pantalla_2025-10-29_170132.jpg
+static/images/toys/20251030_082521_Captura_de_pantalla_2025-10-29_170526.jpg
+static/images/toys/20251030_082659_Captura_de_pantalla_2025-10-29_170731.jpg
+static/images/toys/20251030_083757_Captura_de_pantalla_2025-10-30_083732.jpg
+static/images/toys/20251030_084640_Captura_de_pantalla_2025-10-30_085150.jpg
+static/images/toys/20251030_090051_Captura_de_pantalla_2025-10-30_090519.jpg
+static/images/toys/20251030_090258_Captura_de_pantalla_2025-10-30_090123.jpg
+static/images/toys/20251030_090436_Captura_de_pantalla_2025-10-30_090058.jpg
+static/images/toys/20251030_090813_Captura_de_pantalla_2025-10-30_091237.jpg
+static/images/toys/20251030_091158_547297.jpg
+static/images/toys/20251030_092410_Captura_de_pantalla_2025-10-30_092247.jpg
+static/images/toys/20251030_092502_Captura_de_pantalla_2025-10-30_092318.jpg
+static/images/toys/20251030_092532_Captura_de_pantalla_2025-10-30_092302.jpg
+static/images/toys/20251030_092930_Captura_de_pantalla_2025-10-30_093238.jpg
+static/images/toys/20251030_093008_Captura_de_pantalla_2025-10-30_093323.jpg
+static/images/toys/20251030_094025_Captura_de_pantalla_2025-10-30_093919.jpg
+static/images/toys/20251030_094115_Captura_de_pantalla_2025-10-30_093946.jpg
+static/images/toys/20251030_094159_Captura_de_pantalla_2025-10-30_094348.jpg
+static/images/toys/20251030_094709_Captura_de_pantalla_2025-10-30_095059.jpg
+static/images/toys/20251030_095001_Captura_de_pantalla_2025-10-30_095059.jpg
+static/images/toys/20251030_100530_Captura_de_pantalla_2025-10-30_100439.jpg
+static/images/toys/20251030_100623_Captura_de_pantalla_2025-10-30_100439.jpg
+static/images/toys/20251030_100737_b7ad9df684df078a44713f144c6b400a.png
+static/images/toys/20251030_101529_Captura_de_pantalla_2025-10-30_101953.jpg
+static/images/toys/20251030_102359_Captura_de_pantalla_2025-10-30_102221.jpg
+static/images/toys/20251030_103428_WhatsApp_Image_2025-10-30_at_10.28.51_AM.jpeg
+static/images/toys/20251030_103744_WhatsApp_Image_2025-10-30_at_10.27.02_AM.jpeg
+static/images/toys/20251030_103849_WhatsApp_Image_2025-10-30_at_10.27.02_AM.jpeg
+static/images/toys/20251030_104515_Captura_de_pantalla_2025-10-29_155657.jpg
+static/images/toys/20251030_104643_kcuayv.jpg
+static/images/toys/20251030_104834_Captura_de_pantalla_2025-10-29_161039.jpg
+static/images/toys/20251030_105055_1706-large_default.jpg
+static/images/toys/20251030_105333_Captura_de_pantalla_2025-10-29_155909.jpg
+static/images/toys/20251030_105634_600x600_60d057eb06186.jpg
+static/images/toys/20251030_105825_Captura_de_pantalla_2025-10-30_092302.jpg
+static/images/toys/20251030_105935_Captura_de_pantalla_2025-10-30_092318.jpg
+static/images/toys/20251030_110059_Captura_de_pantalla_2025-10-30_090519.jpg
+static/images/toys/20251030_110338_Captura_de_pantalla_2025-10-30_085931.jpg
+static/images/toys/20251030_112450_WhatsApp_Image_2025-09-25_at_3.39.00_PM.jpeg
+static/images/toys/20251030_112656_Captura_de_pantalla_2025-10-29_162724.jpg
+static/images/toys/20251030_112855_WhatsApp_Image_2025-09-12_at_9.24.00_AM_1.jpeg
+static/images/toys/20251030_113024_Captura_de_pantalla_2025-09-16_084952.jpg
+static/images/toys/20251030_113431_Captura_de_pantalla_2025-09-16_085347.jpg
+static/images/toys/20251030_113630_WhatsApp_Image_2025-06-27_at_10.48.52_AM.jpeg
+static/images/toys/20251030_115334_WhatsApp_Image_2025-10-30_at_11.51.12_AM.jpeg
+static/images/toys/20251030_115605_WhatsApp_Image_2025-06-28_at_9.26.21_AM.jpeg
+static/images/toys/20251030_115930_WhatsApp_Image_2025-06-27_at_9.25.40_AM.jpeg
+static/images/toys/20251030_120357_WhatsApp_Image_2025-06-27_at_9.25.40_AM.jpeg
+static/images/toys/20251030_120531_WhatsApp_Image_2025-06-27_at_10.17.00_AM.jpeg
+static/images/toys/20251031_092437_Captura_de_pantalla_2025-10-31_092944.jpg
